@@ -60,8 +60,10 @@ int ui_end(void);
 int ui_error( ui_error_level severity, const char *format, ... )
      GCC_PRINTF( 2, 3 );
 libspectrum_error ui_libspectrum_error( libspectrum_error error,
-					const char *format, va_list ap );
-int ui_verror( ui_error_level severity, const char *format, va_list ap );
+					const char *format, va_list ap )
+     GCC_PRINTF( 2, 0 );
+int ui_verror( ui_error_level severity, const char *format, va_list ap )
+     GCC_PRINTF( 2, 0 );
 int ui_error_specific( ui_error_level severity, const char *message );
 void ui_error_frame( void );
 
